--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -88,6 +88,7 @@
                             <inputDirectory>${project.build.directory}</inputDirectory>
                             <jsonFiles>
                                 <param>**/cucumber*.json</param>
+                                <param>**/failedTests*.json</param>
                             </jsonFiles>
                             <checkBuildResult>false</checkBuildResult>
                         </configuration>
@@ -96,5 +97,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
