--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 browser=chrome
-url=http://library3.cybertekschool.com
+url=https://library3.cybertekschool.com
 librarian_username=librarian27@library
 librarian_password=ZM9JMdIK
 student_username=student46@library
